Add C++/Rust P/Invoke article

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
           {%- include social.html -%}
         </div>
         <div class="footer-col footer-col-1">
-          <p>{{- site.description | escape -}}</p>
+          <p>{{- site.description_full}}</p>
         </div>
       </div>
   
