--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,6 +10,13 @@
       
         <div class="footer-col footer-col-2">
           {%- include social.html -%}
+          <p class="feed-subscribe">
+            <a href="{{ 'rss' | relative_url }}">
+              <svg class="svg-icon orange">
+                <use xlink:href="{{ 'assets/minima-social-icons.svg#rss' | relative_url }}"></use>
+              </svg><span>Subscribe</span>
+            </a>
+          </p>
         </div>
         <div class="footer-col footer-col-1">
           <p>{{- site.description_full}}</p>
